nginx and docker front

--- a/ReactSolutionFrontend/react-app/src/components/planet-search-form/PlanetSearchForm.scss
+++ b/ReactSolutionFrontend/react-app/src/components/planet-search-form/PlanetSearchForm.scss
@@ -66,3 +66,17 @@
   .react-date-picker__wrapper{
     border: none !important;
   }
+
+
+  .tool-bar-wrapper {
+    width: 50%;
+    margin: 2rem;
+    border: 1px rgb(163, 130, 130) solid;
+    border-radius: 4px;
+    background-color: rgba(126, 111, 148, 0.171);
+  }
+  
+  .sort-icon {
+    color: rgb(39, 33, 33);
+  }
+  
