--- a/ReactSolutionFrontend/react-app/src/components/header/Header.scss
+++ b/ReactSolutionFrontend/react-app/src/components/header/Header.scss
@@ -6,7 +6,8 @@
     justify-content: space-between;
     margin-bottom: 25px;
     text-align: center;
-  
+    
+
     .logo-container {
       height: 100%;
       width: 70px;
@@ -22,7 +23,10 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-  
+      font-size: 1.10rem;
+      
+
+
       .option {
         padding: 10px 15px;
         cursor: pointer;
