--- a/ReactSolutionFrontend/react-app/src/index.css
+++ b/ReactSolutionFrontend/react-app/src/index.css
@@ -4,11 +4,10 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
 }
