--- a/AspSolutionBackend/WebApp/Views/Home/Index.cshtml
+++ b/AspSolutionBackend/WebApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Restofy backend</h1>
+    <h1 class="display-4">Welcome to Cosmos-Odyssey backend v1.0</h1>
     <p>
         <a href="/swagger">Swagger API endpoints documentation</a>
     </p>
