--- a/AspSolutionBackend/WebApp/Views/Home/Index.cshtml
+++ b/AspSolutionBackend/WebApp/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Cosmos-Odyssey backend v1.0</h1>
     <p>
+        Current Date:
+        @DateTime.Now
+    </p>
+    <p>
         <a href="/swagger">Swagger API endpoints documentation</a>
     </p>
 </div>
